--- a/src/styles/coldStart.css
+++ b/src/styles/coldStart.css
@@ -140,7 +140,7 @@
 }
 
 /* ============================================================
-   TRANSISI HALAMAN COLD START (SMOOTH ENTER)
+   TRANSISI HALAMAN COLD START
    ============================================================ */
 
 .page-coldstart .coldstart-page {
